definizione palette del sito

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -17,3 +17,9 @@ $yellow: #ffed4a;
 $green: #38c172;
 $teal: #4dc0b5;
 $cyan: #6cb2eb;
+
+// Site palette
+$boo-orange: #FFAD60;
+$boo-green: #96CEB4;
+$boo-red: #D9534F;
+$boo-yellow: #FFEEAD;
