aggiunta di variabili per durata delle transizioni

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -23,3 +23,9 @@ $boo-orange: #FFAD60;
 $boo-green: #96CEB4;
 $boo-red: #D9534F;
 $boo-yellow: #FFEEAD;
+
+// Transition intervals
+$boo-xshort: .1s;
+$boo-short: .25s;
+$boo-mid: .5s;
+$boo-long: 1s;
