concordanza a:hover con h1 in show

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10989,7 +10989,7 @@ a.text-dark:focus {
 }
 
 #plates-index a:not(.btn):hover:not(#plates-index a:not(.btn).btn) {
-  color: #D9534F;
+  color: #96CEB4;
 }
 
 #show-plate h1 {
