--- a/resources/sass/plates/_index.scss
+++ b/resources/sass/plates/_index.scss
@@ -12,7 +12,7 @@
         color: inherit;
 
         &:hover:not(&.btn) {
-            color: $boo-red;
+            color: $boo-green;
         }
     }
 
