--- a/resources/sass/plates/_index.scss
+++ b/resources/sass/plates/_index.scss
@@ -6,6 +6,16 @@
         cursor: default;
     }
 
+    .searchBar-toggler {
+        color: rgba(0, 0, 0, 0.5);
+
+        padding: 0.25rem 0.75rem;
+        font-size: 1.25rem;
+        line-height: 1;
+        background-color: transparent;
+        border: 1px solid rgba(0, 0, 0, 0.1);
+        border-radius: 0.25rem;
+    }
 
     // Links
     a:not(.btn) {
