--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -34,3 +34,8 @@ $boo-xshort: .15s;
 $boo-short: .25s;
 $boo-mid: .5s;
 $boo-long: 1s;
+
+// Images
+$boo-small-img: 250px;
+$boo-mid-img: 500px;
+$boo-large-img: 750px;
