aggiunto py-3 predefinito nav-buttons

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10949,6 +10949,7 @@ a.text-dark:focus {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  padding: 1rem 0;
 }
 
 .boo-btn-orange {
