--- a/resources/sass/_commons.scss
+++ b/resources/sass/_commons.scss
@@ -17,6 +17,9 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+
+    padding: $spacer 0;
+
 }
 
 //#endregion Navbar
